CP2020 Char Gen fixing stat value issue on mobile.

--- a/src/app/shared/cp2020/cp2020-stats/cp2020-stat/cp2020-stat.component.css
+++ b/src/app/shared/cp2020/cp2020-stats/cp2020-stat/cp2020-stat.component.css
@@ -6,6 +6,4 @@
 
 .stat-values:hover {
   background-color: #CCC;
-  padding-left: 5px;
-  font-size: 17px;
 }
